jsonschemadsl2ecore.trafo.opt/test/test66/invalidtests/example3.test66
{
	"prop1":{"foo":"bar"},
	"prop3":{}
}  